<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Settings.AboutUsFragment">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:tint="@color/dark_green"
        android:layout_marginBottom="30dp"
        android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/sci_plant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_back"
        android:text="About Us"
        android:textSize="25sp"
        android:fontFamily="@font/merriweather_bold"
        android:layout_marginStart="30dp"
        android:textColor="@color/dark_green"/>

    <ScrollView
        android:scrollbars="none"
        android:layout_below="@id/sci_plant"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView28"
                android:justificationMode="inter_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/about_us" />

            <TextView
                android:id="@+id/textView29"
                android:justificationMode="inter_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/about_us_2" />

            <TextView
                android:id="@+id/textView31"
                android:justificationMode="inter_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/about_us_team" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/about_us_3" />

        </LinearLayout>
    </ScrollView>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/sci_plant"
        android:background="@drawable/feather_effect" />

</RelativeLayout>